task1/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ledger-api

  template:
    metadata:
      labels:
        app: ledger-api

    spec:
      serviceAccountName: ledger-sa

      containers:
      - name: ledger-api
        image: ledger-api:v1
        imagePullPolicy: Never

        ports:
        - containerPort: 8080

        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
