task1/audit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: payments

spec:
  selector:
    app: audit-service

  ports:
  - port: 80
    targetPort: 8081

  type: ClusterIP
