task1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api-service
  namespace: payments
spec:
  selector:
    app: ledger-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
