task1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api-ingress
  namespace: payments

spec:
  rules:
  - host: ledger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ledger-api-service
            port:
              number: 80
